# RYH-Hackathon-Vultr-Track

./: README.md  main.py
backend/: .env.example  .gitignore  README.md  __init__.py  alembic.ini  auth.py  config.py  main.py  models.py  pyproject.toml  pyvenv.cfg
backend/Scripts/: activate  activate.bat  activate.fish  activate.nu
backend/agents/: interview_agent.py  job_creator.py  job_creator_agent.py
backend/alembic/: alembic.ini
backend/api/: auth.py
backend/api/routes/: auth.py  initialScreening.py  interview.py  interviewResults.py  job_creator.py  jobs.py
backend/core/: config.py  database.py  security.py
backend/hiredmind_agents/: agents_manager.py  job_creator_agent.py
backend/hiredmind_agents/instructions/: job_creator_instructions.py
backend/models/: job_input.py  models.py  organization.py
backend/schemas/: InitialScreening.py  Interview.py  Job.py  auth.py  company.py  job.py  schemas.py
backend/services/: ExtractTextService.py  InitialScreeningService.py  InterviewEvaluationService.py  InterviewQuestionService.py  auth_service.py
backend/static/: test_streaming.html
frontend/: package-lock.json  package.json
frontend/src/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Chatbot.tsx  Navbar.tsx  ProtectedRoute.tsx  TechBackground.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UserAvatar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: axios.ts  jwt.ts
(+4 files in other folders)
